adds home page with board component and, board and firestore services

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -3,7 +3,7 @@
     <mat-toolbar>
       <span>Trello app</span>
       <span class="spacer"></span>
-      <span>{{ currentUserName$ | async }}</span>
+      <span class="user-name">{{ currentUserName$ | async }}</span>
       <button *ngIf="isAuthenticated$ | async" mat-stroked-button (click)="logOut()">Login Out</button>
     </mat-toolbar>
   </p>
