--- a/src/app/home/owner-board/owner-board.component.html
+++ b/src/app/home/owner-board/owner-board.component.html
@@ -17,8 +17,8 @@
 
       <mat-card-title class="board-title">{{ board.title }}</mat-card-title>
     </mat-card-header>
-    <mat-card-content class="board-description"
-      >{{ board.description }}</mat-card-content
-    >
+    <mat-card-content class="board-description">
+        {{ board.description }}
+    </mat-card-content>
   </mat-card>
 </div>
