--- a/src/app/home/owner-board/owner-board.component.html
+++ b/src/app/home/owner-board/owner-board.component.html
@@ -9,7 +9,7 @@
           <button mat-menu-item>
             <span>Edit</span>
           </button>
-          <button mat-menu-item>
+          <button mat-menu-item (click)="deleteBoard(board.id)">
             <span>Delete</span>
           </button>
         </mat-menu>
