Added add and edit functional, and added spinner

--- a/src/app/home/owner-board/owner-board.component.html
+++ b/src/app/home/owner-board/owner-board.component.html
@@ -1,12 +1,12 @@
 <div class="board">
-  <mat-card>
+  <mat-card *ngIf="edit">
     <mat-card-header>
       <div class="button-menu">
         <button mat-icon-button [matMenuTriggerFor]="menu">
           <mat-icon>more_vert</mat-icon>
         </button>
         <mat-menu #menu="matMenu">
-          <button mat-menu-item>
+          <button mat-menu-item (click)="edit = !edit">
             <span>Edit</span>
           </button>
           <button mat-menu-item (click)="deleteBoard(board.id)">
@@ -20,5 +20,29 @@
     <mat-card-content class="board-description">
       {{ board.description }}
     </mat-card-content>
+  </mat-card>
+
+  <mat-card *ngIf="!edit">
+    <form [formGroup]="form" class="board__form">
+      <div class="board__inputs">
+        <mat-form-field appearance="fill">
+          <mat-label>Title</mat-label>
+          <input matInput formControlName="title" />
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Description</mat-label>
+          <input matInput formControlName="description" />
+        </mat-form-field>
+      </div>
+      <div class="board__buttons">
+        <button mat-stroked-button (click)="updateBoard(board.id)">Save</button>
+        <button
+          mat-stroked-button
+          type="button"
+          (click)="edit = !edit">
+          Cancel
+        </button>
+      </div>
+    </form>
   </mat-card>
 </div>
