--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
+<div *ngIf="showSpinner$ | async" class="spinner">
+  <mat-spinner></mat-spinner>
+</div>
 <app-header></app-header>
 <router-outlet></router-outlet>
