--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,6 +5,6 @@
 .owner-boards {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
   margin-bottom: 24px;
 }
