corrects the style of writing code

--- a/src/app/home/add-board/add-board.component.html
+++ b/src/app/home/add-board/add-board.component.html
@@ -9,11 +9,11 @@
   <mat-card *ngIf="!substitution">
     <form [formGroup]="form" class="add-board__form">
       <div class="add-board__inputs">
-        <mat-form-field appearance="fill">
+        <mat-form-field>
           <mat-label>Title</mat-label>
           <input matInput formControlName="title" />
         </mat-form-field>
-        <mat-form-field appearance="fill">
+        <mat-form-field>
           <mat-label>Description</mat-label>
           <input matInput formControlName="description" />
         </mat-form-field>
