--- a/src/app/home/add-board/add-board.component.html
+++ b/src/app/home/add-board/add-board.component.html
@@ -23,7 +23,7 @@
         <button
           mat-stroked-button
           type="button"
-          (click)="substitution = !substitution">
+          (click)="cancel()">
           Cancel
         </button>
       </div>
