--- a/src/app/home/owner-board/owner-board.component.html
+++ b/src/app/home/owner-board/owner-board.component.html
@@ -39,7 +39,7 @@
         <button
           mat-stroked-button
           type="button"
-          (click)="edit = !edit">
+          (click)="cancel()">
           Cancel
         </button>
       </div>
